# openai-agents-fastapi-boilerplate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent_core.py  custom_sqlite_session.py  docker-compose.yml  eval_guardrail.ipynb  generate_embeddings.py  input_guardrail_dspy_program.json  input_guardrail_experiments.csv  input_guardrail_experiments_fixed.csv  main.py  migrate_agent_db.py  migrate_documents_db.py  my_retriever.py  parse_documents.py  pyproject.toml  upload_files_to_vector_store.py  utils.py
app/: agent_controller.py  test_controller.py
dspy_program/: metadata.json  program.pkl
prompts/: guardrail.md  lead.md
static/: agent.html  index.html
